Fix alignment related to img > class='mountains'

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Carter+One&family=Poppins:wght@300&display=swap');
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -6,6 +7,7 @@ nav a{
     text-align: center;
     color:#caf0f8;
     text-decoration: none;
+    padding: 35px;
 }
 #hero-msg h1{
     text-align: center;
@@ -19,6 +21,13 @@ nav a{
 main{
     text-align: center;
 }
+main section img {
+    box-sizing: border-box;
+}
+.mountains{
+    margin-right: 2000px;
+    padding: 50px 0px 200px;
+}
 section{
     text-align: center;
 }
@@ -28,6 +37,10 @@ section{
 }
 body{
     background-color:white;
+    font-family: Poppins, Helvetica, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 header {
     background-color:#0077b6;
@@ -39,22 +52,38 @@ nav a:hover {
     background-color:#90e0ef;
     color:#0077b6;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover{
     background-color:#00b4d8;
 }
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+.card-img{
+    border: 10px solid #0077b6;
+}
 .msg{
-    background-color:#caf0f8;;
+    background-color:#caf0f8;
+    line-height: 1.5em;
+    padding: 35px;
 }
 .msg h2{
     color:#0077b6;
 }
 .msg p{
     color:#0077b6;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 footer{
     background-color:#0077b6;
     color:#caf0f8;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 footer a{
     color:#caf0f8;
@@ -69,21 +98,34 @@ footer p{
 footer p a:hover {
     text-decoration: underline;
 } 
+footer .social img{
+    padding-top: 15px;
+}
 .home-title{
     color:#0077b6;
+    font-size: 2em;
+    margin-top: 10px;
 }
 h4{
     color:#0077b6;
 }
+h1{
+    font-family: "Carter One", Georgia;
+}
+h2 {
+    margin: 0;
+}
 .logo{
     width: 80px;
 }
+#logo_link{
+    padding-top: 5px;
+}
 .icon{
     width: 80px;
+    padding-top: 10px;
 }
 #hero-img {
     width: 100%;
 }
-.mountains{
-    margin-right: 1500px;
-}
+
